syntax = "proto3";

package franchise;

import "protos/franchise_common.proto";

service FranchiseGalleryService {
  rpc GetFranchiseGallery(FranchiseRequest) returns (stream FranchiseGalleryResponse);
  rpc UploadFranchisePhoto(FranchiseGalleryRequest) returns (FranchiseGalleryResponse);
  rpc DeleteFranchisePhoto(FranchiseRequest) returns (FranchiseRequest);
}


